--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+@charset "UTF-8";
+@import 'scss/variables';
+@import '~bootstrap/scss/bootstrap';
+@import '~ngx-toastr/toastr-bs4-alert';
+@import '~font-awesome/scss/font-awesome';
+@import 'scss/theme';
