finish create structure of project

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -16,7 +16,7 @@ $font-size-bigger: $font-size-base * 1.3;
 $font-family-second: 'Lobster', sans-serif;
 $font-family-third: 'Montserrat', sans-serif;
 
-$enable-rounded: false;
+$enable-rounded: true;
 $enable-shadows: false;
 $enable-gradients: true;
 $enable-transitions: true;
